--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@vitejs/plugin-react": "^5.1.1",
 		"biome": "^0.3.3",
 		"husky": "^9.1.7",
+		"jsdom": "^27.4.0",
 		"lint-staged": "^16.2.7",
 		"playwright": "^1.57.0",
 		"typescript": "~5.9.3",
