--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"typescript": "~5.9.3",
 		"vite": "^7.2.4",
 		"vite-plugin-pwa": "^1.2.0",
-		"vitest": "^4.0.16"
+		"vitest": "^4.0.16",
+		"workbox-window": "^7.4.0"
 	}
 }
